Implement Engine Refreshing
Clicking on the refresh button now will have the engine display changes
made in the editor.

--- a/EnACT/Forms/MainForm.resx
+++ b/EnACT/Forms/MainForm.resx
@@ -126,6 +126,9 @@
   <metadata name="PlayheadTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>177, 18</value>
   </metadata>
+  <metadata name="ToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>309, 18</value>
+  </metadata>
   <metadata name="OpenProjectDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>401, 18</value>
   </metadata>
